Major reformatting + cleanup + fix missing bib

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -155,3 +155,11 @@
   volume = {6},
   pages = {1-25}
 }
+
+@Book{dlbook,
+  author = "Ian Goodfellow and Yoshua Bengio and Aaron Courville",
+  title = "Deep Learning",
+  publisher = "MIT Press",
+  year = "2016"
+}
+
