--- a/chap01.tex
+++ b/chap01.tex
@@ -7,6 +7,10 @@ event has occurred is more informative than learning that a likely event has
 occurred \citep{Goodfellow-et-al-2016}. We define \newterm{self-information} of
 a random event $x$ as
 
+% \[
+%    𝐉 = ∇×𝐇 \qquad 𝐁 = μ₀(𝐌 + 𝐇)
+% \]
+
 \begin{equation}
   I(x) = -\log P(x).
 \end{equation}
