Preparations for xelatex

--- a/chap01.tex
+++ b/chap01.tex
@@ -12,7 +12,7 @@ a random event $x$ as
 % \]
 
 \begin{equation}
-  I(x) = -\log P(x).
+  I(x) = -\log P(x) + π.
 \end{equation}
 
 The overall information in a probability distribution is quantified by
