Cleanup setup, xelatex with unicode-math almost working

--- a/chap02.tex
+++ b/chap02.tex
@@ -548,7 +548,7 @@ TODODODODODODO
         (\vx_1 - \vmu_1 - \mSigma_{12}\mSigma_{22}^{-1} (\vx_2 - \vmu_2)^T (\mSigma/\mSigma_{22})^{-1} (\vx_1 - \vmu_1 -\mSigma_{12} \mSigma_{22}^{-1} (\vx_2 - \vmu_2)) \right\rbrace \label{eq:mvn-quadratic-form-12}
     \end{align}
 
-    In \eqref{eq:mvn-quadratic-form-12} we again see a Gaussian density with
+    In \eqref{eq:mvn-quadratic-form} we again see a Gaussian density with
 
     MEAN JE SPATNE, MINuS
 
