--- a/chap03.tex
+++ b/chap03.tex
@@ -142,7 +142,7 @@ smallest loss without knowing $y_\text{true}$. We minimize the $expected loss$
 {TODO use proper term} by averaging w.r.t. our model's posterior.
 
 \begin{equation}
-  \hat R(y_\text{guess} | x_s ) = \int \gL (y_s, y_\text{guess} p(y_s | x_s, D) \d y_s.
+  \hat R(y_\text{guess} | x_s ) = \int \gL (y_s, y_\text{guess} p(y_s | x_s, D) \diff y_s.
 \end{equation}
 
 \begin{equation}
