--- a/chap03.tex
+++ b/chap03.tex
@@ -157,4 +157,8 @@ to as \emph{training} the GP.
 
 \section{Noisy Gaussian Process Regression}
 
+\section{Conditioning on axes}
+
+Consider a Gaussian process over two dimensional vectors $\bf{x} = (x₁, x₂) \sim 𝓖𝓟(μ, κ)$.
+
 
