--- a/chap06.tex
+++ b/chap06.tex
@@ -4,7 +4,7 @@
 
 \begin{defn}
   The \newterm{Cholesky decomposition} is a decomposition of a
-  positive-definite matrix into a product of a lower triangular matrix and
+  positive definite matrix into a product of a lower triangular matrix and
   its conjugate transpose. Since we will only work with symmetric
   positive-definite matrices we omit the conjugacy and define Cholesky
   decomposition as
@@ -118,7 +118,9 @@ For brevity, we'll apply the MATLAB {TODO ref} backslash operator where $\mA
 
 
 
-\section{TODO Linear Gaussian transform - change of variables}
+\section{TODO Linear Gaussian transform}
+
+\todo{change of variables}
 
 \begin{align}
   P(\vx \in \mM) = \int_\mM \frac{1}{(2 \pi)^{D/2} |\mSigma|^{1/2}|} exp \left(-\frac{1}{2} (\vx - \vmu)^T \mSigma^{-1} (\vx - \vmu) \right) d \vx \\
