Working xelatex build with makefile

--- a/thesis.tex
+++ b/thesis.tex
@@ -141,7 +141,7 @@ Abstract.
 \tableofcontents
 
 \include{preface}
-\include{notation}
+% \include{notation}
 \include{chap00}
 
 % \include{chap01}
