Move chapters into chapters/

--- a/thesis.tex
+++ b/thesis.tex
@@ -140,9 +140,9 @@ Abstract.
 
 \tableofcontents
 
-\include{preface}
+\include{chapters/preface}
 % \include{notation}
-\include{chap00}
+\include{chapters/chap00}
 
 % \include{chap01}
 % \include{chap02}
@@ -150,7 +150,7 @@ Abstract.
 % \include{chap04}
 % \include{chap06}
 
-\include{epilog}
+\include{chapters/epilog}
 
 \include{bibliography}
 
