Add intro to gaussian processes

--- a/thesis.tex
+++ b/thesis.tex
@@ -80,8 +80,9 @@
 \newlength{\notationgap}
 \setlength{\notationgap}{1pc}
 
-% \input{math_commands.tex}
+\input{math_commands.tex}
 
+\usepackage[italic,noendash]{mathastext}
 \usepackage{unicode-math}
 
 \def\ThesisTitle{Bayesian Optimization of Hyperparameters Using Gaussian Processes}
